# podcastman

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  config.toml  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
agents/: accuracy_agent.py  engagement_agent.py  graph.py  prompts.py  script_generator.py  storytelling_agent.py
api/: main.py  routes.py  schemas.py
audio/: assembler.py  postprocess.py
config/: frontend_design.py  settings.py
frontend/: api.py  app.py
ingestion/: chunker.py  parser.py  scraper.py
models/: data.py
project-papers/: main.tex  references.bib
rag/: embeddings.py  retriever.py  vectorstore.py
scripts/: deploy_cloud_run.sh
tests/: test_agents.py  test_api.py  test_ingestion.py  test_rag.py  test_tts.py
tts/: dialogue_parser.py  engine.py  voice_config.py
utils/: helpers.py
voices/: README.md
